# MLJResultsCompiler

./: .copilot-directives.md  .env.example  .gitignore  00_START_HERE.md  ADMIN_ESCROW_ARCHITECTURE.md  AI_FEATURE_GOVERNANCE.md  ARCHITECTURE.md  ASYNC_EVENT_LOOP_IMPLEMENTATION.md  AUDIT_RESOLUTION.md  AUDIT_SUMMARY.py  AUTOMATION_COMPARISON.md  Abdominal & Prostate TEST 2 JANUARY, 2026.xlsx  Abdominal & Prostate TEST 4FEBRUARY 17, 2026.xlsx  Abdominal & Prostate TEST 519 February,2026..xlsx  Abdominal & Prostate Test 1 February 11 2026.xlsx  Abdominal & Prostate Test 3 FEBRUARY 15th, 2026..xlsx  BOT_QUICK_START_GUIDE.md  BUG_FIX_SUMMARY.txt  BUILD_CHECK_RESULTS.md  BUILD_VERIFICATION_GUIDE.md  CAMPUS_MARKET_SECURITY_AUDIT.md  CHANGELOG.md  CHANGES_MADE.md  CHAT_INTERFACE_FIX.md  CLEANUP_STATUS.md  CLEANUP_STRATEGY.md  CODEOWNERS  COMPETITIVE_ANALYSIS.md  COMPILER_V2_DEPLOYMENT.py  COMPILER_V2_GUIDE.txt  COMPREHENSIVE_AUDIT_REPORT.py  CONFIGURATION_AND_SCALABILITY_GUIDE.md  CONVERSATIONAL_GUIDE.md  CRITICAL_TECHNICAL_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DOWNLOAD_FIX_SUMMARY.md  EXECUTIVE_SUMMARY_FOUNDER.md  FILE_INVENTORY.md  FINAL_SUMMARY.md  (+109 more)
.github/workflows/: keepalive.yml  test.yml
backend/: .env.development  .env.example  .gitignore  README.md  RENDER_DEPLOYMENT.md  package.json
backend/src/: server.js
content_manager/: __init__.py  cm_bot.py  models.py  scheduler.py  storage.py
docs/: DEPLOYMENT.md  DESIGN_MECHANICS.md  SECURITY.md
frontend/: .env.example  .env.production  DEPLOY_NOW.md  INTERFACE_PREVIEW.md  QUICKSTART.md  README.md  START_HERE.md  VERCEL_DEPLOYMENT.md  VERCEL_STEP_BY_STEP.md  next.config.js  package-lock.json  package.json  start_frontend.bat  tailwind.config.js
input/: Test 1.xlsx  Test 2.xlsx  Test 3.xlsx
logs/ai_health/: error_log.jsonl  health_log.jsonl  recovery_log.jsonl
logs/batches/: batch_test.jsonl  batch_test_batch_001.jsonl
src/: agent_router.py  agents.py  ai_assistant.py  async_ai_service.py  async_data_agent.py  async_file_io.py  batch_processor.py  color_config.py  config.py  data_agent.py  data_integrity.py  data_source_manager.py  document_learning_engine.py  document_parser.py  excel_processor.py  hybrid_bridge.py  hypersonic_core.py  intent_engine.py  main.py  participation_bonus.py  platform_adapter.py  self_healing.py  session_manager.py  session_storage.py  ui_components.py  universal_gateway.py  validators.py  web_ui.py  web_ui_clean.py
src/agents/: __init__.py  base_agent.py  data_cleaning_agent.py  invoice_agent.py  merger_agent.py  ocr_agent.py  report_generator_agent.py  test_compiler_agent.py
tests/integration/: test_result_consolidation.py
(+14 files in other folders)
